--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/test.html"></include>
     <include src="./partials/test-Taras.html"></include>
+    <include src="./partials/next-page-btn.html"></include>
 
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
