--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
     <!-- <include src="./partials/movie-list.html"></include> -->
     <include src="./partials/next-page-btn.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/contributors.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
