--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   </head>
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
+    <include src="./partials/modal.html"></include>
     <!-- <include src="./partials/movie-list.html"></include> -->
     <include src="./partials/next-page-btn.html"></include>
     <include src="./partials/footer.html"></include>
