--- a/src/index.html
+++ b/src/index.html
@@ -20,9 +20,11 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <!-- <include src="./partials/movie-list.html"></include> -->
     <include src="./partials/header.html"></include>
-    <include src="./partials/next-page-btn.html"></include>
+    <include src="./partials/gallery.html"></include>
+    <include src="./partials/pagination.html"></include>
     <include src="./partials/modal.html"></include>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/spinner.html"></include>
     <include src="./partials/contributors.html"></include>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
