--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/header.html"></include>
     <include src="./partials/gallery.html"></include>
+    <include src="./partials/library.html"></include>
     <include src="./partials/pagination.html"></include>
     <include src="./partials/modal.html"></include>
     <include src="./partials/footer.html"></include>
