--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="./images/film-svg.svg" type="svg" />
+    <link rel="shortcut icon" href="./images/film-svg.svg" type="image" />
     <title>Filmoteka</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
